# PdfManagement

./: CMakeLists.txt  README.md  Risorse.qrc  mainwindow.ui
lib/podofo/: CMakeLists.txt
lib/podofo/include_dir/fontconfig-2.10.1/: Makefile  config.h  config.status  fontconfig-zip  fontconfig.pc  fonts.conf  libtool
lib/podofo/include_dir/fontconfig-2.10.1/conf.d/: Makefile
lib/podofo/include_dir/fontconfig-2.10.1/doc/: Makefile  version.sgml
lib/podofo/include_dir/fontconfig-2.10.1/fc-cache/: Makefile  fc-cache
lib/podofo/include_dir/fontconfig-2.10.1/fc-case/: Makefile  fc-case
lib/podofo/include_dir/fontconfig-2.10.1/fc-cat/: Makefile  fc-cat
lib/podofo/include_dir/fontconfig-2.10.1/fc-glyphname/: Makefile  fc-glyphname
lib/podofo/include_dir/fontconfig-2.10.1/fc-lang/: Makefile  fc-lang
lib/podofo/include_dir/fontconfig-2.10.1/fc-list/: Makefile  fc-list
lib/podofo/include_dir/fontconfig-2.10.1/fc-match/: Makefile  fc-match
lib/podofo/include_dir/fontconfig-2.10.1/fc-pattern/: Makefile  fc-pattern
lib/podofo/include_dir/fontconfig-2.10.1/fc-query/: Makefile  fc-query
lib/podofo/include_dir/fontconfig-2.10.1/fc-scan/: Makefile  fc-scan
lib/podofo/include_dir/fontconfig-2.10.1/fontconfig/: Makefile
lib/podofo/include_dir/fontconfig-2.10.1/src/: Makefile  fcalias.h  fcarch  libfontconfig.la
lib/podofo/include_dir/fontconfig-2.10.1/test/: Makefile
lib/podofo/include_dir/freetype-2.10.2/objs/: autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  (+35 more)
src/: CMakeLists.txt  Command.cpp  Command.h  CommandPattern.cpp  CommandPattern.h  DeletePage.cpp  DeletePage.h  EditRotation.cpp  EditRotation.h  ManagementView.cpp  ManagementView.h  MovePage.cpp  MovePage.h  Observer.h  Page.cpp  Page.h  Password.cpp  Password.h  Pdf.cpp  Pdf.h  SplitPage.cpp  SplitPage.h  Subject.h  Text.txt  UnionPdf.cpp  UnionPdf.h  View.cpp  View.h  main.cpp  mainwindow.cpp  mainwindow.h
test/: CMakeLists.txt  DeletePageTest.cpp  MovePageTest.cpp  SplitTest.cpp  UndoRedoTest.cpp  UnionTest.cpp  ViewTest.cpp
(+50 files in other folders)
